# acmecrab

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.eg.json  flake.nix
.github/: dependabot.yml
.github/workflows/: nix.yml
module/: default.nix
src/: config.rs  crab.rs  error.rs  lib.rs  main.rs
src/api/: api_error.rs  mod.rs  model.rs  routes.rs  server.rs
src/dns/: handlers.rs  mod.rs  server.rs
src/txt_store/: file.rs  memory.rs  mod.rs
