[package]
name = "acmecrab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
axum = "0.6.7"
axum-extra = "0.7.2"
base64 = "0.21.0"
hyper = "0.14.25"
ipnetwork = "0.20.0"
is-terminal = "0.4.5"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["formatting", "macros"] }
tokio = { version = "1.26", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.4.0", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-client = { version = "0.22.0", features = ["serde", "serde-config"] }
trust-dns-proto = { version = "0.22.0", features = ["serde"] }
trust-dns-server = "0.22.0"
